src/objects/List_Custom_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>List Custom Setting</label>
    <fields>
        <fullName>External_Field__c</fullName>
        <externalId>true</externalId>
        <label>External Field</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reqd_Field__c</fullName>
        <label>Reqd Field</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <label>Unique Field</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>